2014-06-02  Raphael Moreira Zinsly  <rzinsly@linux.vnet.ibm.com>

	* tests/quantize.input: Add inputs to test the overflow.

	* sysdeps/powerpc/dfpu/quantized32.c (__quantized32): Refactor and
	add a check to see if the adjusted coefficient will fit in _Decimal32.
	* sysdeps/powerpc/dfpu/quantized128.c (__quantized128): Refactor to
	simplify the code.
	* sysdeps/powerpc/dfpu/quantized64.c (__quantized64): Likewise.

2014-05-29  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/dfpu/quantized32.c (quantized32): Add a todo comment
	to fix the cases where the coefficient overflows.
	* tests/quantize.input: Set the correct output for some tests in
	_Decimal32 mode.

	* sysdeps/powerpc/dfpu/numdigits.h (numdigits): Refactor to remove
	_Decimal to integer cast using assembly load/store.

2014-05-13  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* ieee754r/fpclassifyd128.c (__fpclassifyd128): Rewrite to use
	libdecnumber and avoid DPD-specific code.
	* ieee754r/fpclassifyd32.c (__fpclassifyd32): Likewise.
	* ieee754r/fpclassifyd64.c (__fpclassifyd64): Likewise.
	* include/dfpmacro.h: Allow include the header withouth define
	FUNCTION_NAME.
	* sysdeps/soft-dfp/dpd/numdigits.h (getexp): Refactor to explicity
	tell the expected function return based on PPC instruction.
	* tests/fpclassify.input: Add tests for FP_ZERO.

2014-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.in: Add local-plt rules to make check.
	* configure.ac: Add readelf check.
	* scripts/check-localplt.awk: New file: script to check localplt.awk
	output.
	* scripts/localplt.awk: New file: generate local plt calls from shared
	library.
	* sysdeps/generic/localplt.data: New file: generic local plt calls
	allowed.

2014-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/soft-dfp/trunctdsd2.c (trunctdsd2): Add missing hidden_def.
	* sysdeps/powerpc/fpu/libdfp.abilist: Add missing __dpd_trunctdsd2.
