@@ -1,0 +1,472 @@
+# name isgreater
+# arg1 decimal
+# arg2 decimal
+# ret  int
+
+-2	-2		0
+-2	-1		0
+-2	0		0
+-2	1		0
+-2	2		0
+-1	-2		1
+-1	-1		0
+-1	1		0
+-1	2		0
+0	-2		1
+0	-1		1
+0	0		0
+0	1		0
+0	2		0
+1	-2		1
+1	-1		1
+1	0		1
+1	1		0
+1	2		0
+2	-2		1
+2	-1		1
+2	0		1
+2	1		1
+2	2		0
+
+-200	-200		0
+-200	-100		0
+-200	0		0
+-200	100		0
+-200	200		0
+-100	-200		1
+-100	-100		0
+-100	100		0
+-100	200		0
+0	-200		1
+0	-100		1
+0	0		0
+0	100		0
+0	200		0
+100	-200		1
+100	-100		1
+100	0		1
+100	100		0
+100	200		0
+200	-200		1
+200	-100		1
+200	0		1
+200	100		1
+200	200		0
+
+# some differing length/exponent cases
+7.0	7.0		0
+7.0	7		0
+7	7.0		0
+7E+0	7.0		0
+70E-1	7.0		0
+0.7E+1	7		0
+70E-1	7		0
+7.0	7E+0		0
+7.0	70E-1		0
+7	0.7E+1		0
+7	70E-1		0
+
+8.0	7.0		1
+8.0	7		1
+8	7.0		1
+8E+0	7.0		1
+80E-1	7.0		1
+0.8E+1	7		1
+80E-1	7		1
+8.0	7E+0		1
+8.0	70E-1		1
+8	0.7E+1		1
+8	70E-1		1
+
+8.0	9.0		0
+8.0	9		0
+8	9.0		0
+8E+0	9.0		0
+80E-1	9.0		0
+0.8E+1	9		0
+80E-1	9		0
+8.0	9E+0		0
+8.0	90E-1		0
+8	0.9E+1		0
+8	90E-1		0
+
+7.0	-7.0		1
+7.0	-7		1
+7	-7.0		1
+7E+0	-7.0		1
+70E-1	-7.0		1
+.7E+1	-7		1
+70E-1	-7		1
+7.0	-7E+0		1
+7.0	-70E-1		1
+7	-.7E+1		1
+7	-70E-1		1
+
+8.0	-7.0		1
+8.0	-7		1
+8	-7.0		1
+8E+0	-7.0		1
+80E-1	-7.0		1
+.8E+1	-7		1
+80E-1	-7		1
+8.0	-7E+0		1
+8.0	-70E-1		1
+8	-.7E+1		1
+8	-70E-1		1
+
+8.0	-9.0		1
+8.0	-9		1
+8	-9.0		1
+8E+0	-9.0		1
+80E-1	-9.0		1
+.8E+1	-9		1
+80E-1	-9		1
+8.0	-9E+0		1
+8.0	-90E-1		1
+8	-.9E+1		1
+8	-90E-1		1
+
+-7.0	-7.0		0
+-7.0	-7		0
+-7	-7.0		0
+-7E+0	-7.0		0
+-70E-1	-7.0		0
+-.7E+1	-7		0
+-70E-1	-7		0
+-7.0	-7E+0		0
+-7.0	-70E-1		0
+-7	-.7E+1		0
+-7	-70E-1		0
+
+-8.0	-7.0		0
+-8.0	-7		0
+-8	-7.0		0
+-8E+0	-7.0		0
+-80E-1	-7.0		0
+-.8E+1	-7		0
+-80E-1	-7		0
+-8.0	-7E+0		0
+-8.0	-70E-1		0
+-8	-.7E+1		0
+-8	-70E-1		0
+
+-8.0	-9.0		1
+-8.0	-9		1
+-8	-9.0		1
+-8E+0	-9.0		1
+-80E-1	-9.0		1
+-.8E+1	-9		1
+-80E-1	-9		1
+-8.0	-9E+0		1
+-8.0	-90E-1		1
+-8	-.9E+1		1
+-8	-90E-1		1
+
+123.4560000000000000E789	123.456E789		0	decimal128
+123.456000000000000E-89		123.456E-89		0	decimal64 decimal128
+123.45600000000000E789		123.456E789		0	decimal128
+123.4560000000000E-89		123.456E-89		0	decimal64 decimal128
+123.456000000000E789		123.456E789		0	decimal128
+123.45600000000E-89		123.456E-89		0
+123.4560000000E789		123.456E789		0	decimal128
+123.456000000E-89		123.456E-89		0
+123.45600000E789		123.456E789		0	decimal128
+123.4560000E-89			123.456E-89		0
+123.456000E789			123.456E789		0	decimal128
+123.45600E-89			123.456E-89		0
+123.4560E789			123.456E789		0	decimal128
+123.456E-89			123.456E-89		0
+123.456E-89			123.4560000000000E-89	0
+123.456E789			123.4560000000000E789	0	decimal128
+123.456E-89			123.45600000000000E-89	0
+123.456E789			123.4560000000000E789	0	decimal128
+123.456E-89			123.456000000000E-89	0
+123.456E789			123.45600000000E789	0	decimal128
+123.456E-89			123.4560000000E-89	0
+123.456E789			123.456000000E789	0	decimal128
+123.456E-89			123.45600000E-89	0
+123.456E789			123.4560000E789		0	decimal128
+123.456E-89			123.456000E-89		0
+123.456E789			123.45600E789		0	decimal128
+123.456E-89			123.4560E-89		0
+123.456E789			123.456E789		0	decimal128
+
+1	1E-15		1
+1	1E-14		1
+1	1E-13		1
+1	1E-12		1
+1	1E-11		1
+1	1E-10		1
+1	1E-9		1
+1	1E-8		1
+1	1E-7		1
+1	1E-6		1
+1	1E-5		1
+1	1E-4		1
+1	1E-3		1
+1	1E-2		1
+1	1E-1		1
+1	1E-0		0
+1	1E+1		0
+1	1E+2		0
+1	1E+3		0
+1	1E+4		0
+1	1E+5		0
+1	1E+6		0
+1	1E+7		0
+1	1E+8		0
+1	1E+9		0
+1	1E+10		0
+1	1E+11		0
+1	1E+12		0
+1	1E+13		0
+1	1E+14		0
+1	1E+15		0
+
+1E-15	1		0
+1E-14	1		0
+1E-13	1		0
+1E-12	1		0
+1E-11	1		0
+1E-10	1		0
+1E-9	1		0
+1E-8	1		0
+1E-7	1		0
+1E-6	1		0
+1E-5	1		0
+1E-4	1		0
+1E-3	1		0
+1E-2	1		0
+1E-1	1		0
+1E-0	1		0
+1E+1	1		1
+1E+2	1		1
+1E+3	1		1
+1E+4	1		1
+1E+5	1		1
+1E+6	1		1
+1E+7	1		1
+1E+8	1		1
+1E+9	1		1
+1E+10	1		1
+1E+11	1		1
+1E+12	1		1
+1E+13	1		1
+1E+14	1		1
+1E+15	1		1
+
+0.000000987654321	1E-15		1
+0.000000987654321	1E-14		1
+0.000000987654321	1E-13		1
+0.000000987654321	1E-12		1
+0.000000987654321	1E-11		1
+0.000000987654321	1E-10		1
+0.000000987654321	1E-9		1
+0.000000987654321	1E-8		1
+0.000000987654321	1E-7		1
+0.000000987654321	1E-6		0
+0.000000987654321	1E-5		0
+0.000000987654321	1E-4		0
+0.000000987654321	1E-3		0
+0.000000987654321	1E-2		0
+0.000000987654321	1E-1		0
+0.000000987654321	1E-0		0
+0.000000987654321	1E+1		0
+0.000000987654321	1E+2		0
+0.000000987654321	1E+3		0
+0.000000987654321	1E+4		0
+
+12		12.2345			0
+12.0		12.2345			0
+12.00		12.2345			0
+12.000		12.2345			0
+12.0000		12.2345			0
+12.00000	12.2345			0
+12.000000	12.2345			0
+12.0000000	12.2345			0
+12.00000000	12.2345			0
+12.000000000	12.2345			0
+12.1234		12			1
+12.1234		12.0			1
+12.1234		12.00			1
+12.1234		12.000			1
+12.1234		12.0000			1
+12.1234		12.00000		1
+12.1234		12.000000		1
+12.1234		12.0000000		1
+12.1234		12.00000000		1
+12.1234		12.000000000		1
+-12		-12.2345		1
+-12.0		-12.2345		1
+-12.00		-12.2345		1
+-12.000		-12.2345		1
+-12.0000	-12.2345		1
+-12.00000	-12.2345		1
+-12.000000	-12.2345		1
+-12.0000000	-12.2345		1
+-12.00000000	-12.2345		1
+-12.000000000	-12.2345		1
+-12.1234	-12			0
+-12.1234	-12.0			0
+-12.1234	-12.00			0
+-12.1234	-12.000			0
+-12.1234	-12.0000		0
+-12.1234	-12.00000		0
+-12.1234	-12.000000		0
+-12.1234	-12.0000000		0
+-12.1234	-12.00000000		0
+-12.1234	-12.000000000		0
+
+0	0		0
+0	-0		0
+0	-0.0		0
+0	0.0		0
+-0	0		0
+-0	-0		0
+-0	-0.0		0
+-0	0.0		0
+0.0	0		0
+0.0	-0		0
+0.0	-0.0		0
+0.0	0.0		0
+-0.0	0		0
+-0.0	-0		0
+-0.0	-0.0		0
+-0.0	0.0		0
+
+-0E1	0.0		0
+-0E2	0.0		0
+0E1	0.0		0
+0E2	0.0		0
+-0E1	0		0
+-0E2	0		0
+0E1	0		0
+0E2	0		0
+-0E1	-0E1		0
+-0E2	-0E1		0
+0E1	-0E1		0
+0E2	-0E1		0
+-0E1	-0E2		0
+-0E2	-0E2		0
+0E1	-0E2		0
+0E2	-0E2		0
+-0E1	0E1		0
+-0E2	0E1		0
+0E1	0E1		0
+0E2	0E1		0
+-0E1	0E2		0
+-0E2	0E2		0
+0E1	0E2		0
+0E2	0E2		0
+
+# long number checks (decimal32)
+12345678000	1			1
+1		12345678000		0
+1234567800	1			1
+1		1234567800		0
+1234567890	1			1
+1		1234567890		0
+1234567891	1			1
+1		1234567891		0
+12345678901	1			1
+1		12345678901		0
+1234567896	1			1
+1		1234567896		0
+-1234567891	1			0
+1		-1234567891		1
+-12345678901	1			0
+1		-12345678901		1
+-1234567896	1			0
+1		-1234567896		1
+
+# long number checks (decimal64)
+12345678000	1			1
+1		12345678000		0
+1234567800	1			1
+1		1234567800		0
+1234567890	1			1
+1		1234567890		0
+1234567891	1			1
+1		1234567891		0
+12345678901	1			1
+1		12345678901		0
+1234567896	1			1
+1		1234567896		0
+
+# long number checks (decimal128)
+-36852134.84194296250843579428931	-5830629.8347085025808756560357940	0
+-36852134.84194296250843579428931	-36852134.84194296250843579428931	0
+-36852134.94194296250843579428931	-36852134.84194296250843579428931	0
+-36852134.84194296250843579428931	-36852134.94194296250843579428931	0	decimal32
+-36852134.84194296250843579428931	-36852134.94194296250843579428931	1	decimal64 decimal128
+# residue case
+1		0.9999999	1
+1		0.999999	1
+1		0.99999		1
+1		1.0000		0
+1		1.00001		0
+1		1.000001	0
+1		1.0000001	0
+0.9999999	1		0
+0.999999	1		0
+0.99999		1		0
+1.0000		1		0
+1.00001		1		1
+1.000001	1		1
+1.0000001	1		0	decimal32
+1.0000001	1		1	decimal64 decimal128
+
+# special cases
+Inf	-1000		1
+Inf	-1		1
+Inf	-0		1
+Inf	0		1
+Inf	1		1
+Inf	1000		1
+Inf	Inf		0
+-1000	Inf		0
+-Inf	Inf		0
+-1	Inf		0
+-0	Inf		0
+0	Inf		0
+1	Inf		0
+1000	Inf		0
+Inf	Inf		0
+
+-Inf	-Inf		0
+-Inf	-1000		0
+-Inf	-1		0
+-Inf	-0		0
+-Inf	0		0
+-Inf	1		0
+-Inf	1000		0
+-Inf	Inf		0
+-Inf	-Inf		0
+-1000	-Inf		1
+-1	-Inf		1
+-0	-Inf		1
+0	-Inf		1
+1	-Inf		1
+1000	-Inf		1
+Inf	-Inf		1
+
+NaN	-Inf		0
+NaN	-1000		0
+NaN	-1		0
+NaN	-0		0
+NaN	0		0
+NaN	1		0
+NaN	1000		0
+NaN	Inf		0
+NaN	NaN		0
+-Inf	NaN		0
+-1000	NaN		0
+-1	NaN		0
+-0	NaN		0
+0	NaN		0
+1	NaN		0
+1000	NaN		0
+Inf	NaN		0
+-NaN	-NaN		0
++NaN	-NaN		0
+-NaN	+NaN		0
